Idk Scan Checker

--- a/app.json
+++ b/app.json
@@ -11,8 +11,10 @@
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
-        "NSCameraUsageDescription": "This app uses the camera to scan QR codes."
-      }
+        "NSCameraUsageDescription": "This app uses the camera to scan QR codes.",
+        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to access your microphone"
+      },
+      "bundleIdentifier": "com.saylekxd.boltexponativewind"
     },
     "web": {
       "bundler": "metro",
@@ -31,8 +33,11 @@
     ],
     "android": {
       "permissions": [
-        "CAMERA"
-      ]
+        "CAMERA",
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.saylekxd.boltexponativewind"
     },
     "experiments": {
       "typedRoutes": true
