--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -15,7 +17,7 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.3",
     "babel-plugin-module-resolver": "^5.0.0",
-    "expo": "52.0.33",
+    "expo": "^52.0.35",
     "expo-barcode-scanner": "~12.9.3",
     "expo-blur": "^14.0.3",
     "expo-camera": "~16.0.16",
@@ -49,6 +51,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
+    "supabase": "^2.12.1",
     "typescript": "^5.3.3"
   }
 }
